--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   align-items: center;
   border-radius: 5px;
   border: 1px solid white;
+  list-style: none;
 }
 
 /* Estilos para cada una de las box */
